--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
+    "string-similarity": "^1.2.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
